Fix warnings. Rename some missed spots for Dependency -> DependencyInstance.
